<resources>
    <string name="app_name">Glycemic Index Menu Planner</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search">Search</string>
    <string name="star">*</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_info">Informations</string>
    <string name="drawer_list_gi">Glycemic Index list</string>
    <string name="drawer_menus">Menus</string>
    <string name="drawer_settings">Settings</string>
    <string name="loading_data">Loading data..</string>
    <string name="gi_search_hint">Search a glycemic index</string>
    <string name="gi_details_title">Glycemic Index details</string>
    <string name="error_search_gi_message">Invalid search text</string>
    <string name="edit_recipe_ingredients">Ingredients</string>
    <string name="edit_recipe_instructions">Instructions</string>
    <string name="edit_recipe_servings">Servings</string>
    <string name="edit_recipe_prep_time">Preparation time</string>
    <string name="edit_recipe_cooking_time">Cooking time</string>
    <string name="edit_recipe_time">mn</string>
    <string name="edit_recipe_notes">Notes</string>
    <string name="edit_recipe_references">References</string>
    <string name="edit_recipe_video_link">Video link</string>
    <string name="edit_recipe_title">My new menu</string>
    <string name="add_ingredient_title">Add new ingredient</string>
    <string name="add_ingredient_name">Name</string>
    <string name="add_ingredient_amount">Amount</string>
    <string name="add_ingredient_notes">Notes</string>
</resources>
