
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:scaleType="center">
        <EditText
            android:id="@+id/add_ingredient_name"
            android:layout_width="match_parent"
            android:hint="@string/add_ingredient_name"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:scaleType="center">
            <EditText
                android:id="@+id/add_ingredient_amount"
                android:layout_width="match_parent"
                android:hint="@string/add_ingredient_amount"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <spinner
            android:id="@+id/add_ingredient_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </spinner>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:scaleType="center">
        <EditText
            android:id="@+id/add_ingredient_notes"
            android:layout_width="match_parent"
            android:hint="@string/add_ingredient_notes"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

</LinearLayout>




